2010-08-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	CID 99
	CID 100
	CID 101
	CID 102
	* libfs/src/dosfs/fat_file.c, libfs/src/dosfs/msdos.h,
	libfs/src/dosfs/msdos_misc.c: Resolve invalid use of const identified
	by Coverity scanner.

2010-08-23	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1673/cpukit
	* score/src/chainappendempty.c, score/src/chaingetempty.c,
	score/src/chainprependempty.c: New files.
	* score/Makefile.am: Reflect changes above.
	* score/include/rtems/score/chain.h: Declare
	_Chain_Append_with_empty_check(), _Chain_Prepend_with_empty_check(),
	and _Chain_Get_with_empty_check().
	* score/inline/rtems/score/chain.inl: Define
	_Chain_Append_with_empty_check_unprotected(),
	_Chain_Prepend_with_empty_check_unprotected(), and
	_Chain_Get_with_empty_check_unprotected().

2010-08-23	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1671/cpukit
	* libcsupport/include/rtems/gxx_wrappers.h: New file.
	* libcsupport/Makefile.am, libcsupport/preinstall.am: Reflect change
	above.
	* libcsupport/src/gxx_wrappers.c: Include <rtems/gxx_wrappers.h>.  Use
	_Internal_error_Occurred() instead of rtems_panic().
	* score/include/rtems/score/interr.h: Added
	INTERNAL_ERROR_GXX_KEY_ADD_FAILED and
	INTERNAL_ERROR_GXX_MUTEX_INIT_FAILED.

2010-08-20	<yann.sionneau@telecom-sudparis.eu>

	* libmisc/fb/fb.h: Add constants for buffer modes.

2010-08-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/include/rtems/posix/aio_misc.h: Add decl for aio_request_queue.
	* posix/src/aio_misc.c: Add aio_request_queue.

2010-08-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/include/rtems/posix/aio_misc.h: Remove rtems_aio_request_s,
	rtems_aio_request_chain_s, rtems_aio_queue_s;
	* posix/include/aio.h: Separate LIO-modes from LIO-opcodes (From
	freebsd).

2010-08-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* sapi/include/rtems/chain.h: Move extern "C".

2010-08-16	Alin Rus <alin.codejunkie@gmail.com>

	* posix/include/aio.h: Add LIO_SYNC.